<resources>
    <string name="app_name">Ronda</string>
    <string-array name="menu">
        <item> Monuments </item>
        <item> Museums </item>
        <item> Cultural agenda </item>
        <item> Where to eat </item>
        <item> Where to sleep </item>
        <item> Additional Information </item>
    </string-array>
    <string-array name="monumentos_titulo">
        <item> Bullring </item>
        <item> Felipe V Arch</item>
        <item> Casa Rey Moro </item>
        <item> Walls </item>
        <item> Santa Maria La Mayor Church</item>
        <item> Arab baths </item>
    </string-array>
    <string-array name="monumentos_contenido">
        <item> The Ronda Bullring, due to its history and architecture, its character and beauty, is recognized as one of the oldest and most monumental in existence. This is not by chance, since Ronda is considered one of the cradles of modern 18th century bullfighting. Century where, after the relief of the knights in the games with the bull, the Romero family emerged in the city, a family that for three generations brings together the most unique bullfighters of the time.
        The bullfighting boom led the Real Maestranza de Caballería de Ronda to erect its famous plaza, a work that is attributed to Martín de Aldehuela, the same architect of the great New Bridge over the Tajo de Ronda.
        Conceived in sandstone with a monumental scheme, the nobility of its architectural design, with its double gallery of arcades and the absence of exposed lines, gives it a spirit more of a cloister than an enclosure for bullfighting shows, recalling the circular courtyard of the famous Palace of Carlos V in the Alhambra in Granada.
        Covered with a gabled Arabic tile roof, the elegance of its interior is unmatched in any other bullring.</item>
        <item> After the collapse of the first new bridge in 1741, the need to improve this entrance to the city was raised due to the large flow of people and goods that were again forced to use it.
        The old Arab Gate of the Bridge was replaced and enlarged by the current one during the reign of the first Bourbon on the Spanish throne Felipe V, in 1742, as recorded in the stone inscription located next to the door.
        This emblematic monument of the city consists of a double ashlar arch, crowned by three pinnacles and adorned with the Anjou shell and the royal shield of the Bourbons on its outer face.</item>
        <item> It is located on Cuesta de Santo Domingo street. The first documentary evidence of this imposing house-palace dates from the 18th century, although it has undergone frequent restructuring as a result of successive changes of owner. The plan of the house is irregular and labyrinthine, with abundant stairs and corridors that serve to bridge the unevenness. The long façade adapts to the curve of the street and has two towers of different heights as well as two doors.
        Inside the water catchment mine is preserved, of Arab origin. It is a complex Islamic work that descends to the bottom of the Tagus where the Guadalevín River flows, which was built taking advantage of a vertical crack in the rock, where a staircase carved in the stone with more than 200 steps is developed and that descends vertically some 100 meters. Inside there are a series of rooms, from cisterns to rooms, which were used as a powder magazine and grain storage.</item>
        <item> Ronda\'s location on a rocky promontory has given it a marked strategic and defensive value throughout history. In Muslim times the Medina was located, clearly delimited both by the natural barrier that is the gorge excavated by the Guadalevín, and by the city walls themselves.
        Of the important preserved walled fence, we must highlight the Almocábar gate located in the southern sector of the medina, built in the 13th century and restructured in the period of Carlos V, it takes its name from the word “Al-maqabir It was one of The main access doors to the city and gave entry to the Barrio Alto, currently the Holy Spirit and the Muslim medina.
        </item>
        <item> According to archaeological studies carried out in the area, this church was located very close to the remains of an early Christian basilica from the 5th century AD. Some historians also date back to Roman times when it served as a temple. This last point has not yet been archeologically proven.
        In the same place, the largest mosque in the Medina was built later under Islamic rule. Only the arch of the Mirhab and a part of the wall with an ataurique decoration are preserved from it, hidden behind the altarpiece of the altar of the tabernacle.
        The Catholic Monarchs, after the conquest of the city, ordered the building of the temple in the place of the mosque, whose works began in 1485 and after many vicissitudes, they were concluded at the end of the 17th century.
        </item>
        <item> This thermal complex from the Muslim period is the best preserved in the Iberian Peninsula. It is located in the Old Islamic Quarter of the City, currently called the Barrio de San Miguel on the outskirts of what was at the time the Muslim Medina of Ronda.
        It was built between the 13th-14th centuries AD next to the Arroyo de las Culebras, to ensure the supply of water, which moved through a system of waterwheel, perfectly preserved today.
        These are structured in three fundamental areas, following the Roman model: cold, warm and hot bath rooms. Until now the hydraulic system of the same has practically arrived in its integrity.</item>
    </string-array>
    <string-array name="museos_titulo">
        <item> Lara Museum </item>
        <item> Mondragon Palace</item>
        <item> Bandit Museum </item>
        <item> Unicaja Joaquin Peinado Museum </item>
        <item> Bullfighting Museum of the Real Maestranza de Caballeria de Ronda</item>
        <item> Plaza Museo de Ronda RMR </item>
    </string-array>
    <string-array name="museos_contenido">
        <item> The Lara Museum is an art and antique museum located in the town of Ronda, in the province of Malaga, Spain.
            It is based in the old Palace-House of the Counts of the Conquest of the Batanes Islands, in the old part of the city.
            It contains a collection of more than 2000 works and pieces organized in seven thematic rooms: the weapons room, the clock room, collecting, the romantic room, the scientific room, the popular arts and the archaeological room.</item>
        <item> The Mondragon Palace, also known as the Palace of the Marquis of Villasierra, is a Mudejar-Renaissance building located in the old town of Ronda, Spain.
            Today the palace houses the Municipal Museum of Ronda, which contains a collection of historical and archaeological interest.</item>
        <item> The museum, located in a house from the end of the 19th century, is structured in five rooms. Thus, there is the so-called Romantic travelers and documentation, in which baptism and death certificates, burial certificates and search and capture certificates are collected, as well as photographs of bandits known as José María Hinojosa "El Tempranillo", Diego Corrientes Mateos, José Ulloa "Tragabuches" or Francisco Ríos González Francisco Ríos González.
            Another of the dependencies is Vivir el bandolerismo where three stagings are represented: Mes\ón, Secuestro and Cueva and in which the mannequins appear dressed in the costumes typical of the time being reproduced.
            There is also a comic collection made up of more than 200 copies dated around 1940, in which the life of the bandits is narrated.
            On the other hand, you can also visit The men and the names, which houses an exhibition of costumes, oil paintings, watercolors and photographs of the bandits most recognized by the public, as well as some events that starred many of them; or Those who followed the trail, dedicated to the security forces that persecuted the bandits: the Civil Guard.
            In it, in addition to finding records of the capture of bandits and official bulletins of this security body, the distribution of the commanderies is made known through a map; the commands, decorations and the first uniforms of the Benemérita. All original material.
            Finally, the tour is completed in the Weapons and Written Testimonies room, which contains a wide collection of bandits own weapons such as pistols, knives or leggings. In addition, the museum also has a library that houses more than 495 books written by characters who lived closely at this stage in history and whose editions date from 1823 to the present.
        </item>
        <item> The Joaqu\ín Peinado de Ronda Museum (M\álaga province, autonomous community of Andalusia, Spain), is located in the old town of Ronda, between the Mondrag\ón Palace and the Church of Santa Mar\ía la Mayor
            This museum tries to reflect part of the life of the Painter Joaqu\ín Peinado, it was built at the beginning of the 20th century and in it you can see Baroque, Spanish-Muslim and Renaissance elements.
            It has two courtyards with Tuscan columns on which the balconies on the upper floor are supported.
            Unicaja has invested more than € 830,000 in the Peinado museum to restore the facilities, where there are 195 works by the Andalusian painter.
            The museum is organized in 7 rooms, where works on various topics are exhibited:
            Room 1 Landscapes
            Room 2 Mexico
            Room 3 Animals
            Room 4 Figures and portraits
            Room 5 Nudes and erotic
            Room 6 Don Quixote
            Room 7 Mudejar Room
        </item>
        <item> The Bullfighting Museum occupies a quarter of the square under the shade lines.
            Its route illustrates, in a didactic way, the mythical origins of bullfighting in universal culture, its roots in the Iberian Peninsula and the evolution of bullfighting, from popular bullfighting and the real functions of knightly bullfighting, to becoming a regulated show. complemented with testimonies of the importance of Ronda and its dynasties of bullfighters, the Romero and the Ord\óñez, in the history of the bullfighting festival.
            The collection groups together painting, sculpture, graphic arts, textiles, tools and objects, historical documentation and pieces of contemporary art, accompanied by relevant information, which places each work in its context, spinning a homogeneous discourse with them.
        </item>
        <item> The Plaza Museo de Ronda is one of the cultural complexes with the highest number of visits in Andalusia. It integrates four centuries of history into a single space.
            The Ronda Bullring, inaugurated in 1785 and declared an Asset of Cultural Interest in 1993, is the oldest in the world for equestrian and bullfighting shows.
            Located under the lines of the square it houses three collections: the Royal Saddlery of the House of Orleans, the Bullfighting Collection and the RMR History room.
            At the Picadero, the visitor can sometimes see the training sessions of the RMR Riding School, the oldest in Spain.
        </item>
    </string-array>
    <string-array name="agendacultural_titulo">
        <item> Cultural Calendar </item>
    </string-array>
    <string-array name="agendacultural_contenido">
        <item> Due to the circumstances of the covid we do not have events on the canlendar. </item>
    </string-array>
    <string-array name="taxi_titulo">
        <item> Servicio Taxi </item>
        <item> Parada Taxi </item>
        <item> Servicio Taxi </item>
    </string-array>
    <string name="nnota">New Note</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="newnote">New Note</string>
</resources>