<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/newnote"
        android:textSize="35dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:focusable="true"
        android:hint="@string/title"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="243dp"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:hint="@string/content"
        android:textColorHint="#ffff299f" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-22dp"
        android:layout_marginRight="-22dp"
        android:layout_marginBottom="9dp"
        android:layout_toStartOf="@+id/textview"
        android:layout_toLeftOf="@+id/textview"
        android:text="@string/nnota" />

    <Button
        android:id="@+id/button2"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-30dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginBottom="27dp"
        android:layout_toEndOf="@+id/textview"
        android:layout_toRightOf="@+id/textview"
        android:text="@string/cancel" />

</RelativeLayout>